--- a/config/application.yml
+++ b/config/application.yml
@@ -6,3 +6,11 @@ AWS_SECRET_KEY: "SJ81k3jNWPHF5/9sV8BrHLx0+55pi8cu62Zvq7uj"
 AWS_BUCKET: "techrise"
 
 SLACK_API: xoxp-19510056500-19510056516-58812858308-4f915dc512
+
+production:
+  GITHUB_KEY: c3b5261aec41eed090f4
+  GITHUB_SECRET: 77a31450c6ad87012b3956a2041b2b40ecd58851
+
+development:
+  GITHUB_KEY: 73f0ec90e2bca89eb4db
+  GITHUB_SECRET: c3137e3b45eec5cb6e9cdae999e7f8b8592b5a1f
