remove password requirement when user signs in with oauth

--- a/config/application.yml
+++ b/config/application.yml
@@ -10,11 +10,11 @@ SLACK_API: xoxp-19510056500-19510056516-58812858308-4f915dc512
 production:
   GITHUB_KEY: c3b5261aec41eed090f4
   GITHUB_SECRET: 77a31450c6ad87012b3956a2041b2b40ecd58851
-  FACEBOOK_KEY: 958036334324735
+  FACEBOOK_KEY: "958036334324735"
   FACEBOOK_SECRET: 67924787766968066ada4cd8d337489a
 
 development:
   GITHUB_KEY: 73f0ec90e2bca89eb4db
   GITHUB_SECRET: c3137e3b45eec5cb6e9cdae999e7f8b8592b5a1f
-  FACEBOOK_KEY: 1749651381976553
+  FACEBOOK_KEY: "1749651381976553"
   FACEBOOK_SECRET: f980351ea6b2e704221c52c650dfcd8f
