add staging keys

--- a/config/application.yml
+++ b/config/application.yml
@@ -18,3 +18,9 @@ development:
   GITHUB_SECRET: c3137e3b45eec5cb6e9cdae999e7f8b8592b5a1f
   FACEBOOK_KEY: "1749651381976553"
   FACEBOOK_SECRET: f980351ea6b2e704221c52c650dfcd8f
+
+staging:
+  GITHUB_KEY: adddccb428291c7df62e
+  GITHUB_SECRET: 562eb1c27489640e811576daee7614b3adce8424
+  FACEBOOK_KEY: "639983469516769"
+  FACEBOOK_SECRET: 8d825f7c19956452cc01006ece947252
