--- a/config/cable.yml
+++ b/config/cable.yml
@@ -2,6 +2,10 @@ development:
   adapter: redis
   url: redis://localhost:6379/1
 
+staging:
+  adapter: redis
+  url: redis://localhost:6379/1
+
 test:
   adapter: async
 
