--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,7 +4,7 @@ development:
 
 staging:
   adapter: redis
-  url: redis://localhost:6379/1
+  url: redis://redistogo:c7b2fb013c95b36b67760fa2080eaffe@sculpin.redistogo.com:10413/
 
 test:
   adapter: async
